--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,11 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Цвет фона -->
-    <item android:drawable="#ffffff"/>  <!-- зелёный цвет -->
-
-    <!-- Логотип -->
     <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/iteco" /> <!-- имя вашего PNG без расширения -->
+        <bitmap android:gravity="fill" android:src="@drawable/background"/>
+    </item>
+    <item>
+        <bitmap android:gravity="center" android:src="@drawable/splash"/>
     </item>
 </layer-list>
